<resources>
    <string name="app_name">600 Essential TOEIC Words</string>
    <string name="title_home">Home</string>
    <string name="title_600_TOEIC_words">600 Essential TOEIC Words</string>
    <string name="title_settings">Settings</string>
    <string name="title_categories">Categories</string>
    <string name="title_game">Game</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
