<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="0dp"
    android:paddingEnd="@dimen/dp_8">

    <TextView
        android:id="@+id/textHome"
        style="@style/TextAppearance.AppCompat.DrawerNavigationTab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_home"
        android:gravity="center_vertical"
        android:text="@string/title_home" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginTop="@dimen/dp_8"
        android:background="@color/colorGray" />

    <TextView
        android:id="@+id/textTitleVocabulary"
        style="@style/TextAppearance.AppCompat.DrawerNavigationTab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_600_TOEIC_words"
        android:textColor="@color/colorStrongGray"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:id="@+id/textVocabulary"
        style="@style/TextAppearance.AppCompat.DrawerNavigationTab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_vocabulary"
        android:text="@string/title_categories" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginTop="@dimen/dp_8"
        android:background="@color/colorGray" />

    <TextView
        android:id="@+id/textTitleGame"
        style="@style/TextAppearance.AppCompat.DrawerNavigationTab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_game"
        android:textColor="@color/colorStrongGray"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:id="@+id/textGame"
        style="@style/TextAppearance.AppCompat.DrawerNavigationTab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_settings"
        android:text="@string/title_game" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginTop="@dimen/dp_8"
        android:background="@color/colorGray" />

    <TextView
        android:id="@+id/textTitleSettings"
        style="@style/TextAppearance.AppCompat.DrawerNavigationTab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_settings"
        android:textColor="@color/colorStrongGray"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:id="@+id/textSettings"
        style="@style/TextAppearance.AppCompat.DrawerNavigationTab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_settings"
        android:text="@string/title_settings" />
</LinearLayout>
